// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`offline round data entry renders 1`] = `
<div>
  <form>
    <p>
      When you have examined all the ballots assigned to you, enter the number of votes recorded for each candidate/choice from the audited ballots.
    </p>
    <div
      class="bp3-card bp3-elevation-0"
    >
      <h5
        class="bp3-heading"
      >
        Contest 1
      </h5>
      <label
        class="sc-dnqmqq cUrdEb"
        for="results[contest-id-1][choice-id-1]"
      >
        Votes for 
        Choice One
        :
        <div
          class="sc-ifAKCX eNyQfb"
        >
          <div
            class="bp3-input-group sc-EHOje bzcNaj"
          >
            <input
              class="bp3-input"
              id="results[contest-id-1][choice-id-1]"
              name="results[contest-id-1][choice-id-1]"
              style="padding-right: 10px;"
              value=""
            />
          </div>
        </div>
      </label>
      <label
        class="sc-dnqmqq cUrdEb"
        for="results[contest-id-1][choice-id-2]"
      >
        Votes for 
        Choice Two
        :
        <div
          class="sc-ifAKCX eNyQfb"
        >
          <div
            class="bp3-input-group sc-EHOje bzcNaj"
          >
            <input
              class="bp3-input"
              id="results[contest-id-1][choice-id-2]"
              name="results[contest-id-1][choice-id-2]"
              style="padding-right: 10px;"
              value=""
            />
          </div>
        </div>
      </label>
    </div>
    <div
      class="bp3-card bp3-elevation-0"
    >
      <h5
        class="bp3-heading"
      >
        Contest 2
      </h5>
      <label
        class="sc-dnqmqq cUrdEb"
        for="results[contest-id-2][choice-id-3]"
      >
        Votes for 
        Choice Three
        :
        <div
          class="sc-ifAKCX eNyQfb"
        >
          <div
            class="bp3-input-group sc-EHOje bzcNaj"
          >
            <input
              class="bp3-input"
              id="results[contest-id-2][choice-id-3]"
              name="results[contest-id-2][choice-id-3]"
              style="padding-right: 10px;"
              value=""
            />
          </div>
        </div>
      </label>
      <label
        class="sc-dnqmqq cUrdEb"
        for="results[contest-id-2][choice-id-4]"
      >
        Votes for 
        Choice Four
        :
        <div
          class="sc-ifAKCX eNyQfb"
        >
          <div
            class="bp3-input-group sc-EHOje bzcNaj"
          >
            <input
              class="bp3-input"
              id="results[contest-id-2][choice-id-4]"
              name="results[contest-id-2][choice-id-4]"
              style="padding-right: 10px;"
              value=""
            />
          </div>
        </div>
      </label>
    </div>
    <button
      class="bp3-button bp3-intent-primary sc-htoDjs hNDkTe sc-bwzfXH eBfcXh"
      type="submit"
    >
      <span
        class="bp3-button-text"
      >
        Submit Data for Round 1
      </span>
    </button>
  </form>
</div>
`;

exports[`offline round data entry submits 1`] = `
<div>
  <form>
    <p>
      When you have examined all the ballots assigned to you, enter the number of votes recorded for each candidate/choice from the audited ballots.
    </p>
    <div
      class="bp3-card bp3-elevation-0"
    >
      <h5
        class="bp3-heading"
      >
        Contest 1
      </h5>
      <label
        class="sc-dnqmqq cUrdEb"
        for="results[contest-id-1][choice-id-1]"
      >
        Votes for 
        Choice One
        :
        <div
          class="sc-ifAKCX eNyQfb"
        >
          <div
            class="bp3-input-group bp3-disabled sc-EHOje bzcNaj"
          >
            <input
              class="bp3-input"
              disabled=""
              id="results[contest-id-1][choice-id-1]"
              name="results[contest-id-1][choice-id-1]"
              style="padding-right: 10px;"
              value="1"
            />
          </div>
        </div>
      </label>
      <label
        class="sc-dnqmqq cUrdEb"
        for="results[contest-id-1][choice-id-2]"
      >
        Votes for 
        Choice Two
        :
        <div
          class="sc-ifAKCX eNyQfb"
        >
          <div
            class="bp3-input-group bp3-disabled sc-EHOje bzcNaj"
          >
            <input
              class="bp3-input"
              disabled=""
              id="results[contest-id-1][choice-id-2]"
              name="results[contest-id-1][choice-id-2]"
              style="padding-right: 10px;"
              value="2"
            />
          </div>
        </div>
      </label>
    </div>
    <div
      class="bp3-card bp3-elevation-0"
    >
      <h5
        class="bp3-heading"
      >
        Contest 2
      </h5>
      <label
        class="sc-dnqmqq cUrdEb"
        for="results[contest-id-2][choice-id-3]"
      >
        Votes for 
        Choice Three
        :
        <div
          class="sc-ifAKCX eNyQfb"
        >
          <div
            class="bp3-input-group bp3-disabled sc-EHOje bzcNaj"
          >
            <input
              class="bp3-input"
              disabled=""
              id="results[contest-id-2][choice-id-3]"
              name="results[contest-id-2][choice-id-3]"
              style="padding-right: 10px;"
              value="1"
            />
          </div>
        </div>
      </label>
      <label
        class="sc-dnqmqq cUrdEb"
        for="results[contest-id-2][choice-id-4]"
      >
        Votes for 
        Choice Four
        :
        <div
          class="sc-ifAKCX eNyQfb"
        >
          <div
            class="bp3-input-group bp3-disabled sc-EHOje bzcNaj"
          >
            <input
              class="bp3-input"
              disabled=""
              id="results[contest-id-2][choice-id-4]"
              name="results[contest-id-2][choice-id-4]"
              style="padding-right: 10px;"
              value="2"
            />
          </div>
        </div>
      </label>
    </div>
    <button
      class="bp3-button bp3-disabled bp3-intent-primary sc-htoDjs hNDkTe sc-bwzfXH eBfcXh"
      disabled=""
      tabindex="-1"
      type="submit"
    >
      <span
        class="bp3-button-text"
      >
        Already Submitted Data for Round 1
      </span>
    </button>
  </form>
</div>
`;
